修改README.md和部分注释